--- a/Anime-Score.css
+++ b/Anime-Score.css
@@ -6,27 +6,27 @@ Template=/* [TITLE] *[DEL]/ .list-table td.data.image > a[href^="/[TYPE]/[ID]/"]
 MatchTemplate=/[TYPE]/[ID]/
 */
 
-/* 86 Part 2 */ .list-table td.data.image > a[href^="/anime/48569/"]::after { content: "8.60"; visibility: visible !important; }
-/* Blue Period */ .list-table td.data.image > a[href^="/anime/46352/"]::after { content: "7.78"; visibility: visible !important; }
-/* Boruto: Naruto Next Generations */ .list-table td.data.image > a[href^="/anime/34566/"]::after { content: "5.89"; visibility: visible !important; }
-/* Isekai Shokudou 2 */ .list-table td.data.image > a[href^="/anime/48804/"]::after { content: "7.65"; visibility: visible !important; }
-/* Jahy-sama wa Kujikenai! */ .list-table td.data.image > a[href^="/anime/48753/"]::after { content: "7.04"; visibility: visible !important; }
-/* Kimetsu no Yaiba: Mugen Ressha-hen */ .list-table td.data.image > a[href^="/anime/49926/"]::after { content: "8.52"; visibility: visible !important; }
-/* Komi-san wa, Comyushou desu. */ .list-table td.data.image > a[href^="/anime/48926/"]::after { content: "8.49"; visibility: visible !important; }
-/* Mieruko-chan */ .list-table td.data.image > a[href^="/anime/48483/"]::after { content: "7.47"; visibility: visible !important; }
-/* Mushoku Tensei: Isekai Ittara Honki Dasu Part 2 */ .list-table td.data.image > a[href^="/anime/45576/"]::after { content: "8.61"; visibility: visible !important; }
-/* One Piece */ .list-table td.data.image > a[href^="/anime/21/"]::after { content: "8.60"; visibility: visible !important; }
-/* Platinum End */ .list-table td.data.image > a[href^="/anime/44961/"]::after { content: "7.52"; visibility: visible !important; }
-/* Saihate no Paladin */ .list-table td.data.image > a[href^="/anime/48761/"]::after { content: "7.51"; visibility: visible !important; }
-/* Sekai Saikou no Ansatsusha, Isekai Kizoku ni Tensei suru */ .list-table td.data.image > a[href^="/anime/47790/"]::after { content: "7.68"; visibility: visible !important; }
-/* Shaman King (2021) */ .list-table td.data.image > a[href^="/anime/42205/"]::after { content: "6.67"; visibility: visible !important; }
-/* Shin no Nakama ja Nai to Yuusha no Party wo Oidasareta node, Henkyou de Slow Life suru Koto ni Shimashita */ .list-table td.data.image > a[href^="/anime/44037/"]::after { content: "7.13"; visibility: visible !important; }
-/* Shinka no Mi: Shiranai Uchi ni Kachigumi Jinsei */ .list-table td.data.image > a[href^="/anime/46985/"]::after { content: "6.55"; visibility: visible !important; }
-/* Shuumatsu no Harem */ .list-table td.data.image > a[href^="/anime/41946/"]::after { content: "6.63"; visibility: visible !important; }
-/* Takt Op. Destiny */ .list-table td.data.image > a[href^="/anime/48556/"]::after { content: "8.09"; visibility: visible !important; } 
-/* Tennis no Ouji-sama */ .list-table td.data.image > a[href^="/anime/22/"]::after { content: "7.88"; visibility: visible !important; }
-/* Tsuki to Laika to Nosferatu */ .list-table td.data.image > a[href^="/anime/48471/"]::after { content: "7.34"; visibility: visible !important; }
-/* World Trigger 3rd Season */ .list-table td.data.image > a[href^="/anime/44940/"]::after { content: "8.09"; visibility: visible !important; } 
+/* 86 Part 2 */ .list-table td.data.image > a[href^="/anime/48569/"]::after { content: "8.58"; visibility: visible !important }
+/* Blue Period */ .list-table td.data.image > a[href^="/anime/46352/"]::after { content: "7.77"; visibility: visible !important }
+/* Boruto: Naruto Next Generations */ .list-table td.data.image > a[href^="/anime/34566/"]::after { content: "5.89"; visibility: visible !important }
+/* Isekai Shokudou 2 */ .list-table td.data.image > a[href^="/anime/48804/"]::after { content: "7.65"; visibility: visible !important }
+/* Jahy-sama wa Kujikenai! */ .list-table td.data.image > a[href^="/anime/48753/"]::after { content: "7.03"; visibility: visible !important }
+/* Kimetsu no Yaiba: Mugen Ressha-hen */ .list-table td.data.image > a[href^="/anime/49926/"]::after { content: "8.49"; visibility: visible !important }
+/* Komi-san wa, Comyushou desu. */ .list-table td.data.image > a[href^="/anime/48926/"]::after { content: "8.46"; visibility: visible !important }
+/* Mieruko-chan */ .list-table td.data.image > a[href^="/anime/48483/"]::after { content: "7.47"; visibility: visible !important }
+/* Mushoku Tensei: Isekai Ittara Honki Dasu Part 2 */ .list-table td.data.image > a[href^="/anime/45576/"]::after { content: "8.60"; visibility: visible !important }
+/* One Piece */ .list-table td.data.image > a[href^="/anime/21/"]::after { content: "8.60"; visibility: visible !important }
+/* Platinum End */ .list-table td.data.image > a[href^="/anime/44961/"]::after { content: "7.48"; visibility: visible !important }
+/* Saihate no Paladin */ .list-table td.data.image > a[href^="/anime/48761/"]::after { content: "7.50"; visibility: visible !important }
+/* Sekai Saikou no Ansatsusha, Isekai Kizoku ni Tensei suru */ .list-table td.data.image > a[href^="/anime/47790/"]::after { content: "7.70"; visibility: visible !important }
+/* Shaman King (2021) */ .list-table td.data.image > a[href^="/anime/42205/"]::after { content: "6.66"; visibility: visible !important }
+/* Shin no Nakama ja Nai to Yuusha no Party wo Oidasareta node, Henkyou de Slow Life suru Koto ni Shimashita */ .list-table td.data.image > a[href^="/anime/44037/"]::after { content: "7.15"; visibility: visible !important }
+/* Shinka no Mi: Shiranai Uchi ni Kachigumi Jinsei */ .list-table td.data.image > a[href^="/anime/46985/"]::after { content: "6.45"; visibility: visible !important }
+/* Shuumatsu no Harem */ .list-table td.data.image > a[href^="/anime/41946/"]::after { content: "6.62"; visibility: visible !important }
+/* Takt Op. Destiny */ .list-table td.data.image > a[href^="/anime/48556/"]::after { content: "8.02"; visibility: visible !important }
+/* Tennis no Ouji-sama */ .list-table td.data.image > a[href^="/anime/22/"]::after { content: "7.88"; visibility: visible !important }
+/* Tsuki to Laika to Nosferatu */ .list-table td.data.image > a[href^="/anime/48471/"]::after { content: "7.34"; visibility: visible !important }
+/* World Trigger 3rd Season */ .list-table td.data.image > a[href^="/anime/44940/"]::after { content: "8.11"; visibility: visible !important }
 /* 100-man no Inochi no Ue ni Ore wa Tatteiru */ .list-table td.data.image > a[href^="/anime/41380/"]::after { content: "6.48"; visibility: visible !important; }
 /* 100-man no Inochi no Ue ni Ore wa Tatteiru 2nd Season */ .list-table td.data.image > a[href^="/anime/44881/"]::after { content: "6.85"; visibility: visible !important; }
 /* 2.43: Seiin Koukou Danshi Volley-bu */ .list-table td.data.image > a[href^="/anime/40679/"]::after { content: "6.15"; visibility: visible !important; }
@@ -755,3 +755,6 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Uzaki-chan wa Asobitai! 2nd Season */ .list-table td.data.image > a[href^="/anime/42962/"]::after { content: "N/A"; visibility: visible !important; }
 /* Youjo Senki II */ .list-table td.data.image > a[href^="/anime/49233/"]::after { content: "N/A"; visibility: visible !important; }
 /* Zombieland Saga Movie */ .list-table td.data.image > a[href^="/anime/50159/"]::after { content: "N/A"; visibility: visible !important; }
+/* Kaifuku Jutsushi no Yarinaoshi */ .list-table td.data.image > a[href^="/anime/40750/"]::after { content: "6.31"; visibility: visible !important }
+/* Phi Brain: Kami no Puzzle */ .list-table td.data.image > a[href^="/anime/9981/"]::after { content: "7.19"; visibility: visible !important }
+/* Tanaka-kun wa Itsumo Kedaruge */ .list-table td.data.image > a[href^="/anime/32093/"]::after { content: "7.87"; visibility: visible !important }
