--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -1167,6 +1167,29 @@ body.ownlist .data.genre textarea { right: -1060px; }
 .list-table .list-table-data:hover .data.title .link:hover{z-index:101;}
 
 
+/*------------------------------*\
+|        FALLING SNOW           |
+\*------------------------------*/
+
+.list-container:after  {    
+position: fixed;
+left: 0;
+top: 0;
+content: '';
+width: 100%;
+height: 100%;
+background-image: url(https://i.ibb.co/SwVybNR/snow1.webp),
+url(https://i.ibb.co/f0CmQJY/snow2.webp),
+url(https://i.ibb.co/xFYhq0L/snow3.webp);
+animation: SNOW 15s linear infinite;
+z-index: -10;
+}
+
+@keyframes SNOW {
+	0% { background-position: 0 0, 0 0, 0 0; }
+	100% { background-position: 500px 1000px, 400px 400px, 300px 300px; }
+}
+
 
 /* Premiered Season Mod */
 div.list-unit:not(.plantowatch) .data.season {
@@ -1221,6 +1244,7 @@ div.list-unit.plantowatch .data.days {
 /* Smooth Scroll */
 html { scroll-behavior: smooth; }
 
-/*Quick diable snow*/   
+/*Quick diable snow*/   /*
 .list-container:after  {
-background-image: url(), url(), url();}
+background-image: none !important; }
+*/
