Edit Ln483 - Just messing around with BG

--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -486,10 +486,10 @@ body[data-query*='status":7'] {
     background-size: cover !important;
     background-position: bottom !important;
 } */
-body[data-query*='status":7'] {
-    background: url(https://i.ibb.co/wBvPdk9/Comet-Less-BG.webp) fixed no-repeat !important;
+body[data-query*='status":3'] {
+    background: url(https://i.ibb.co/ryYsHwf/Falling-Comets-2.webp) fixed no-repeat !important;
     background-color: #161616 !important;
-    background-size: contain !important;
+    background-size: cover !important;
     background-position: bottom !important;
 }
 /* Watching/Reading */
