--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -486,11 +486,17 @@ body[data-query*='status":7'] {
     background-size: cover !important;
     background-position: bottom !important;
 } */
-body[data-query*='status":4'] {
+body[data-query*='status":4'] div#list-container:after {
+    content: '';
     background: url(https://i.ibb.co/ryYsHwf/Falling-Comets-2.webp) fixed no-repeat !important;
     background-color: #161616 !important;
     background-size: cover !important;
     background-position: bottom !important;
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -999;
 }
 /* Watching/Reading */
 body[data-query*='status":1'] { --background: url(); }
