Edit Ln483 - Remove BG
Removed the background from 'All Anime'

--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -479,13 +479,14 @@ If you want a wallpaper on a category, you can add direct background images link
 |
 \*------------------------------*/
 
-/* All Anime */		/*
+/* All Anime */
+body[data-query*='status":7'] { --background: url(); }	/*
 body[data-query*='status":7'] {
     background: url(https://i.ibb.co/ryYsHwf/Falling-Comets-2.webp) fixed no-repeat !important;
     background-color: #161616 !important;
     background-size: cover !important;
     background-position: bottom !important;
-} */
+} 
 body[data-query*='status":7'] div#list-container:after {
     content: '';
     background: url(https://i.ibb.co/ryYsHwf/Falling-Comets-2.webp) fixed no-repeat !important;
