--- a/CSS_Mangalist.css
+++ b/CSS_Mangalist.css
@@ -1190,9 +1190,18 @@ html { scroll-behavior: smooth; }
 .list-table-data:hover {
     background: url(https://i.ibb.co/8jsXnf4/Hover-Circle-Neon-Cyan.gif) no-repeat;
     background-position: -3px;
-    background-size: 10%;
+    background-size: 9.7%;
 }
 
-/*Quick diable snow*/   
-.list-container:after  {
-background-image: url(), url(), url();}
+/* Anime+ Status */
+span.status { z-index:999; }
+span.status:before {
+	content: "";
+	width: 30px;
+	height: 20px;
+}
+span.status:before:hover {
+	width: 300px;
+	height: 200px;
+	background: url(https://anime.plus/jery_js/WzIsIjAwODRhMGQ0IiwiMDAwMzM1OWEiLCIwMDQ0NjA4NCIsIjAwMDExNTZhIiwiMDAwMDAwMDAiLCIwMDc3OWZlMiIsIjUwNzc5ZmUyIiwiMDA3NzlmZTIiLCIwMDc3OWZlMiJd/1643274105) no-repeat;
+}
