Add 'Anime+ Status'

--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -1241,10 +1241,18 @@ html { scroll-behavior: smooth; }
 .list-table-data:hover {
     background: url(https://i.ibb.co/8jsXnf4/Hover-Circle-Neon-Cyan.gif) no-repeat;
     background-position: -3px;
-    background-size: 10%;
+    background-size: 9.7%;
 }
 
-/*Quick diable snow*/   /*
-.list-container:after  {
-background-image: none !important; }
-*/
+/* Anime+ Status */
+span.status { z-index:999; }
+span.status:before {
+	content: "";
+	width: 30px;
+	height: 20px;
+}
+span.status:before:hover {
+	width: 300px;
+	height: 200px;
+	background: url(https://anime.plus/jery_js/export?settings=WzEsIjk3YjBjZCIsIjAwY2RjMCIsIjg4MTA4OSIsIjcwNzA3MCIsIjAwMDAwMCIsIjIzZmZmYSIsImZmNGVkZiIsImZmMTBkOCIsIjI4NTFmZiJd) no-repeat;
+}
