Testing out the Clarified layout with Clarity Mods

--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -1,11 +1,11 @@
 @\import "https://malscraper.azurewebsites.net/covers/anime/jery_js/presets/dataimagelinkbefore";
  
-@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Theme%20-%20Compressed.css";
+/*	@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Theme%20-%20Compressed.css";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Hover%20Image%20Compressed.css";
-@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Dark%20Mode%20Compressed.css";
+@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Dark%20Mode%20Compressed.css";	*/
 
-@\import "https://jeryjs.github.io/Hosting/Anime-Synopsis.css";
-@\import "https://jeryjs.github.io/Hosting/Anime-Score.css";
+/*	@\import "https://jeryjs.github.io/Hosting/Anime-Synopsis.css";
+@\import "https://jeryjs.github.io/Hosting/Anime-Score.css";	*/
 
 
 
