--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -7,6 +7,8 @@
 /*	@\import "https://jeryjs.github.io/Hosting/Anime-Synopsis.css";
 @\import "https://jeryjs.github.io/Hosting/Anime-Score.css";	*/
 
+@\import "https://raw.githubusercontent.com/ValerioLyndon/MAL-Public-List-Designs/master/Clarified%20Theme/Clarified.css";
+
 
 
 /*-T-I-N-Y--T-W-E-A-K-S-----------*\
