--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -4,10 +4,8 @@
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Hover%20Image%20Compressed.css";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Dark%20Mode%20Compressed.css";
 
-@\import "https://jeryjs.github.io/Hosting/Anime-Synopsis.css";
-@\import "https://jeryjs.github.io/Hosting/Anime-Score.css";
-
-@\import "https://raw.githubusercontent.com/ValerioLyndon/MAL-Public-List-Designs/master/Clarified%20Theme/Clarified.css";
+/*	@\import "https://jeryjs.github.io/Hosting/Anime-Synopsis.css";
+@\import "https://jeryjs.github.io/Hosting/Anime-Score.css";	*/
 
 
 
