--- a/CSS_Animelist.css
+++ b/CSS_Animelist.css
@@ -1,7 +1,6 @@
 @\import "https://malscraper.azurewebsites.net/covers/anime/jery_js/presets/dataimagelinkbefore";
  
-/*	@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Theme%20-%20Compressed.css";	*/
-@\import "https://jeryjs.github.io/Hosting/Clarity_Theme_Edit.css";
+@\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Theme%20-%20Compressed.css";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Hover%20Image%20Compressed.css";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Dark%20Mode%20Compressed.css";
 
