--- a/CSS_Mangalist.css
+++ b/CSS_Mangalist.css
@@ -1128,6 +1128,29 @@ body.ownlist .data.genre textarea { right: -1060px; }
 .list-table .list-table-data:hover .data.title .link:hover{z-index:101;}
 
 
+/*------------------------------*\
+|        FALLING SNOW           |
+\*------------------------------*/
+
+.cover-block:before  {    
+/*position: fixed;*/
+left: 0;
+top: 0;
+content: '';
+width: 100%;
+height: 100%;
+background-image: url(https://i.ibb.co/SwVybNR/snow1.webp),
+url(https://i.ibb.co/f0CmQJY/snow2.webp),
+url(https://i.ibb.co/xFYhq0L/snow3.webp);
+animation: SNOW 15s linear infinite;
+z-index: -10;
+}
+
+@keyframes SNOW {
+	0% { background-position: 0 0, 0 0, 0 0; }
+	100% { background-position: 500px 1000px, 400px 400px, 300px 300px; }
+}
+
 
 /* Data Type Mod */
 .data.type {
