--- a/CSS_Mangalist.css
+++ b/CSS_Mangalist.css
@@ -5,8 +5,9 @@
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Hover%20Image%20Compressed.css";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/Clarity%20Theme/Mod%20-%20Dark%20Mode%20Compressed.css";
 
-@\import "https://jeryjs.github.io/Hosting/Manga-Synopsis.css";
-@\import "https://jeryjs.github.io/Hosting/Manga-Score.css";
+/* @\import "https://jeryjs.github.io/Hosting/Manga-Synopsis.css"; */
+/* @\import "https://jeryjs.github.io/Hosting/Manga-Score.css"; */
+@\import "https://jeryjs.github.io/Hosting/Manga-Score-and-Synopsis.css";
 
 
 
