--- a/CSS_Mangalist.css
+++ b/CSS_Mangalist.css
@@ -112,7 +112,8 @@ td.data.public-score a {
 	padding: 4px 4px 4px 4px !important;
 	background: black;
 	margin: 14px 0 0 23px;
-	border-radius: 40px 40px 100px 100px;
+	border-radius: 140px 140px 40px 40px;
+	width: 25px;
 	z-index: 10;
 }
 
@@ -1095,9 +1096,9 @@ td.data.mal_score {
     padding: 4px 4px 4px 4px !important;
     background: black;
     margin: 52px 0 0 23px;
-    border-radius: 40px 40px 100px 100px;
+    border-radius: 140px 140px 40px 40px;
+	width: 25px;
   	z-index: 5;
-  	color: var(--text) !important;
 }
 /*------------------------------*\
 |  Anime/Manga-Synopsis    |
